fixed scrollbar

--- a/src/assets/scss/cmp/_group-list.scss
+++ b/src/assets/scss/cmp/_group-list.scss
@@ -8,7 +8,7 @@
     list-style-type: none;
     margin: 6px;
     padding-bottom: 5px;
-    width: 100%;
+    // width: 100%;
 
     //   overflow-y: hidden;
     //   overflow-x: auto;
